kubernetes/base/portal/portal-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal
  namespace: meethour
  labels:
    app: portal
spec:
  selector:
    matchLabels:
      app: portal
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: portal
    spec:
      containers:
        - name: portal
          image: prasadvempower/nginx-php-fpm-laravel:v1
          imagePullPolicy: Always     
          ports:
            - containerPort: 80
            - containerPort: 443       
          resources:
            requests:
              cpu: 500m
              memory: 200Mi
            limits:
              cpu: 5000m
              memory: 200Mi
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 100
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 100
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
      restartPolicy: Always
